# Academy-PoW

./: .editorconfig  .gitignore  Cargo.toml  Makefile  NarratingTheWorkshop.md  README.md  SettingUpTheBootnode.md  rust-toolchain.toml  spec.json
.github/scripts/: interact-with-contract.sh
.github/workflows/: ci.yml  contracts-unit-test-suite.yml  e2e-test-suite.yml  e2e-tests-suite.yml  publish-docker-fork-visualizer.yml  publish-docker.yml  runtime-tests.yml  unit-tests-suite.yml
academy-pow-extension/: Cargo.toml  Makefile
academy-pow-extension/src/: ink.rs  lib.rs  substrate.rs
account/: Cargo.toml
account/src/: lib.rs
contracts/: Makefile
contracts/new_a/: Cargo.toml  lib.rs
contracts/old_a/: Cargo.toml  lib.rs
contracts/psp22/: Cargo.toml  Makefile  lib.rs
contracts/psp22-traits/: Cargo.toml  lib.rs
contracts/roulette/: Cargo.toml  Makefile  lib.rs
contracts/simple-dex/: Cargo.toml  lib.rs
contracts/test-utils/: Cargo.toml  lib.rs
contracts/wrapped-native/: Cargo.toml  lib.rs
docker/: .dockerignore  Dockerfile  academy-chain-compose.yml  docker_entrypoint.sh
examples/: README.md  balance.js  package-lock.json  package.json  transfer.js
fork-visualizer/: .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
fork-visualizer/src/: constants.js  index.css
fork-visualizer/src/app/: layout.js  page.js
fork-visualizer/src/app/components/: BlockCounter.jsx  BlockList.jsx  BlockTable.jsx  BlockTracker.jsx  CustomBlockNode.jsx  Flow.jsx  ForceGraph.jsx  HorizontalBlockList.jsx  LayoutFlow.jsx  NodeTracker.jsx  NodeWsController.jsx  NodeWsInput.jsx
fork-visualizer/src/app/graph/: layout.js  page.js
fork-visualizer/src/app/improvedData/: dataFetcher.jsx  layout.js
fork-visualizer/src/app/oldGraph/: page.js
fork-visualizer/src/app/tree/: page.js  tree.js
modified-sc-consensus-pow/: Cargo.toml
modified-sc-consensus-pow/src/: lib.rs  worker.rs
modified-sp-consensus-pow/: Cargo.toml
modified-sp-consensus-pow/src/: lib.rs
multi-pow/: Cargo.toml
multi-pow/src/: lib.rs
node/: Cargo.toml  build.rs
node/pow-primitives/: Cargo.toml
node/pow-primitives/src/: lib.rs
node/sha3pow/: Cargo.toml
node/sha3pow/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  main.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  eth_pubsub.rs  mod.rs
pallets/managed_address_mapping/: Cargo.toml
pallets/managed_address_mapping/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: address_mapping.rs  block_author.rs  chain_extension.rs  difficulty.rs  faucet.rs  issuance.rs  lib.rs  precompiles.rs  utxo.rs
scripts/: bootstrap_chain.sh  check_excluded.sh  deploy.sh  interact.sh
sha3pow/: Cargo.toml
sha3pow/src/: lib.rs
