[profile.release]
panic = "unwind"

[workspace]
exclude = [
	"contracts/roulette",
	"contracts/psp22-traits",
	"contracts/psp22",
	"contracts/simple-dex",
	"contracts/old_a",
	"contracts/new_a",
	"contracts/test-utils",
]
members = [
	"node",
	"runtime",
	"multi-pow",
]
resolver = "2"

[workspace.dependencies]

# Crates.io dependencies
async-trait = { version = "0.1.53" }
clap = { version = "4.3.0", features = [ "derive" ] }
futures = "0.3.1"
hex = "0.4"
hex-literal = "0.4.1"
jsonrpsee = { version = "0.16.0", features = [ "server" ] }
log = "0.4.8"
md5 = "0.7.0"
parity-scale-codec = { version = "3.1.2", features = [ "derive" ], default-features = false }
rand = { version = "0.8.5", features = [ "small_rng" ] }
scale-info = { version = "2.1.2", features = [ "derive" ], default-features = false }
serde = { version = "1.0.137" }
sha3 = "0.10.1"

# Local Dependencies
academy-pow-runtime = { path = "../runtime" }
multi-pow = { default-features = false, path = "../multi-pow" }

# Polkadot SDK Dependencies
frame-executive = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system-rpc-runtime-api = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-contracts = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-contracts-primitives = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-insecure-randomness-collective-flip = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-cli = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-manual-seal = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-pow = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-network = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-service = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-api = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-pow = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-keystore = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-session = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-version = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
substrate-build-script-utils = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { branch = "polkadot-v1.0.0", git = "https://github.com/paritytech/substrate.git" }
substrate-wasm-builder = { branch = "polkadot-v1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
