[package]
authors = ['Anonymous']
edition = '2021'
name = 'multi-pow'
description = 'a concrete Substrate PoW algorithm that supports multiple hashing algorithms'
version = '3.0.0'

[dependencies]
parity-scale-codec = {version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.1", optional = true, default-features = false }
md5 = "0.7.0"

sc-consensus-pow = { workspace = true, optional = true }
sp-api = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sc-client-api = { workspace = true, optional = true }

[features]
default = ['std']
std = [
    'sha3',
    'sc-consensus-pow',
    'sc-client-api',
]
 