[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2021'
name = 'academy-pow'
version = '3.0.0'

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[dependencies]
futures = '0.3.1'
log = '0.4.8'
clap = { version = "4.3.0", features = ["derive"] }
parity-scale-codec = '3.1.2'
sha3 = "0.10.1"
rand = { version = "0.8.5", features = ["small_rng"] }

academy-pow-runtime = { path = "../runtime" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.0", features = ["server"] }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

sc-consensus-pow = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus-manual-seal = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-basic-authorship = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-cli = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-client-api = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-executor = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-network = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-service = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-telemetry = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-transaction-pool = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-api = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-blockchain = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-pow = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-inherents = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-timestamp = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-transaction-pool = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
multi-pow = {path = '../multi-pow'}
hex = "0.4"

[[bin]]
name = 'academy-pow'
