[package]
authors = [ "Anonymous" ]
build = "build.rs"
edition = "2021"
name = "academy-pow"
version = "3.0.0"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
jsonrpsee = { workspace = true }

# Local Dependencies
academy-pow-runtime = { path = "../runtime" }
multi-pow = { path = "../multi-pow" }

# Polkadot SDK
pallet-transaction-payment-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-block-builder = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-consensus-pow = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }
