[package]
authors = ['Parity Technologies <admin@parity.io>', 'Joshy Orndorff']
edition = '2021'
homepage = 'https://substrate.dev'
name = 'academy-pow-runtime'
version = '3.0.0'

[dependencies]
parity-scale-codec = { workspace = true , default-features = false, features = ["derive"] }
scale-info = { workspace = true , default-features = false, features = ["derive"] }
serde = { workspace = true , optional = true }
async-trait = { workspace = true , optional = true }

account = { path = "../account", default-features = false}


pallet-balances = { default-features = false, workspace = true }
# pallet-sudo = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
frame-executive = { default-features = false, workspace = true }
frame-support = { default-features = false, workspace = true }
sp-api = { default-features = false, workspace = true }
sp-block-builder = { default-features = false, workspace = true }
sp-consensus-pow = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-inherents = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-offchain = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-session = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
sp-transaction-pool = { default-features = false, workspace = true }
sp-version = { default-features = false, workspace = true }
pallet-timestamp = { default-features = false, workspace = true }
sp-keystore = { optional = true, workspace = true }
pallet-contracts = { default-features = false, workspace = true }
pallet-contracts-primitives = { default-features = false, workspace = true }
pallet-transaction-payment = { default-features = false, workspace = true }
pallet-insecure-randomness-collective-flip = { default-features = false, workspace = true }

# Used for the node's RPCs
pallet-transaction-payment-rpc-runtime-api = { default-features = false, workspace = true }
frame-system-rpc-runtime-api = { default-features = false, workspace = true }


# Frontier
pallet-base-fee = { default-features = false, workspace = true }
pallet-evm = { default-features = false, workspace = true }
pallet-evm-chain-id = { default-features = false, workspace = true }
pallet-ethereum = { default-features = false, workspace = true }
fp-evm = { default-features = false, workspace = true }
fp-rpc = { default-features = false, workspace = true }
fp-self-contained = { default-features = false, workspace = true }
pallet-evm-precompile-modexp = { default-features = false, workspace = true }
pallet-evm-precompile-sha3fips = { default-features = false, workspace = true }
pallet-evm-precompile-simple = { default-features = false, workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"

[build-dependencies]
substrate-wasm-builder = { default-features = false, workspace = true }

[features]
default = ['std']
std = [
    'account/std',
    'pallet-balances/std',
    'parity-scale-codec/std',
    'frame-executive/std',
    'frame-support/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-pow/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    # 'pallet-sudo/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-timestamp/std',
    'async-trait',
    'sp-keystore',
    'pallet-evm/std',
    'pallet-evm-chain-id/std',
    'pallet-ethereum/std',
    'pallet-base-fee/std',
    'fp-evm/std',
    'fp-rpc/std',
    'fp-self-contained/std',
    'pallet-contracts/std',
    "pallet-contracts-primitives/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-insecure-randomness-collective-flip/std",
    "frame-system-rpc-runtime-api/std",
]
